--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "directories": {
     "lib": "lib"
   },
+  "dependencies": {
+    "inquirer": "^8.2.0",
+    "jest": "^27.3.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "jest"
   },
@@ -18,11 +23,5 @@
   "bugs": {
     "url": "https://github.com/briandgomez/C10-Team-Profile-Generator/issues"
   },
-  "homepage": "https://github.com/briandgomez/C10-Team-Profile-Generator#readme",
-  "dependencies": {
-    "inquirer": "^8.2.0"
-  },
-  "devDependencies": {
-    "jest": "^27.3.1"
-  }
+  "homepage": "https://github.com/briandgomez/C10-Team-Profile-Generator#readme"
 }
